@startuml

'/*
' *  UCF COP3330 Fall 2021 Assignment 4 Solutions
' *  Copyright 2021 Jeanne Moore
' */

class Sorter {
    -inFileName: String

    +readFile(): ArrayList<String>
    +alphabetSortList(ArrayList<String> list): ArrayList<String>
    +printToFile(ArrayList<String> list)): void
}


class Solution41 {
    nameList: ArrayList<String>
}

class ListPrinter {
    -outFileName: String
    +printToFile(ArrayList<String> list)): File
}

Solution41 --o Sorter
Sorter --o ListPrinter

@enduml